[tool.poetry]
name = "PROJECT"
version = "0.1.0"
description = ""
authors = ["MaksymStaskiv <maksymstaskiv@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.0"
Jinja2 = "^2.11.2"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
